# flet-popover

./: README.md  index.html  mkdocs.yml  pyproject.toml
docs/: FletPopover.md  index.md
examples/flet_popover_example/: pyproject.toml
examples/flet_popover_example/src/: main.py
site/: 404.html  objects.inv
site/FletPopover/: index.html
src/flet_popover/: flet_popover.py
src/flet_popover.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/flutter/flet_popover/: pubspec.yaml
src/flutter/flet_popover/lib/src/: create_control.dart  flet_popover.dart
